@@ -5,6 +5,7 @@ Objective Caml 3.12.1:
 
 Bug fixes:
 - PR#4794, PR#4959: call annotations not generated by ocamlopt
+- PR#5103: build and install objinfo when building with ocamlbuild
 - PR#5110: invalid module name when using optional argument
 - PR#5177: Gc.compact implies Gc.full_major
 
